# lbom

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
lbom/: main.py
lbom/bom/: BomHandler.py  BomHandlerCyclonedx.py
lbom/clearly_defined/: ClearlyDefinedClient.py  ClearlyDefinedDetail.py  ClearlyDefinedProviders.py
lbom/license/: LicenseResolver.py
lbom/utils/: Utils.py
